/**IS-ISRout(e)ingprotocol-isis_zebra.h**Copyright(C)2001,2002SampoSaaristo*Tamp
ereUniversityofTechnology*InstituteofCommunicationsEngineering**Thisprogramisfre
esoftware;youcanredistributeitand/ormodifyit*underthetermsoftheGNUGeneralPublicL
icenseaspublishedbytheFree*SoftwareFoundation;eitherversion2oftheLicense,or(atyo
uroption)*anylaterversion.**Thisprogramisdistributedinthehopethatitwillbeuseful,
butWITHOUT*ANYWARRANTY;withouteventheimpliedwarrantyofMERCHANTABILITYor*FITNESSF
ORAPARTICULARPURPOSE.SeetheGNUGeneralPublicLicensefor*moredetails.**Youshouldhav
ereceivedacopyoftheGNUGeneralPublicLicensealong*withthisprogram;seethefileCOPYIN
G;ifnot,writetotheFreeSoftware*Foundation,Inc.,51FranklinSt,FifthFloor,Boston,MA
02110-1301USA*/#ifndef_ZEBRA_ISIS_ZEBRA_H#define_ZEBRA_ISIS_ZEBRA_Hexternstructz
client*zclient;voidisis_zebra_init(structthread_master*);voidisis_zebra_stop(voi
d);voidisis_zebra_route_update(structprefix*prefix,structisis_route_info*route_i
nfo);intisis_distribute_list_update(introutetype);voidisis_zebra_redistribute_se
t(afi_tafi,inttype);voidisis_zebra_redistribute_unset(afi_tafi,inttype);#endif/*
_ZEBRA_ISIS_ZEBRA_H*/